clusters/production/external-servers/pterodactyl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pterodactyl
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
