clusters/production/external-servers/pterodactyl/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pterodactyl-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pterodactyl.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: pterodactyl
          port: 80
          scheme: http
